Add base coq generation from coq-test branch, adapted as necessary

--- a/spectec/src/dune
+++ b/spectec/src/dune
@@ -11,6 +11,7 @@
     (re_export backend_prose)
     (re_export backend_splice)
     (re_export backend_interpreter)
+    (re_export backend_coq)
     (re_export il2al)
   )
 )
