--- a/spectec/src/backend-coq/dune
+++ b/spectec/src/backend-coq/dune
@@ -1,5 +1,5 @@
 (library
   (name backend_coq)
-  (libraries util il el frontend str)
-  (modules gen ast transform)
+  (libraries util il)
+  (modules gen ast translate)
 )
