--- a/spectec/src/backend-coq/dune
+++ b/spectec/src/backend-coq/dune
@@ -1,5 +1,5 @@
 (library
   (name backend_coq)
   (libraries util il)
-  (modules case gen coqast il2coq print)
+  (modules case gen coqast il2coq print else)
 )
